@@ -1,73 +1,29 @@
 package pt.buscaimoveis.security;
 
-import jakarta.servlet.FilterChain;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
-import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.header.writers.StaticHeadersWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.http.HttpMethod;
-import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.filter.OncePerRequestFilter;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
-@EnableWebSecurity
-public class SecurityConfig {
-
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-        return httpSecurity
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS antes de tudo
-                .csrf(AbstractHttpConfigurer::disable) // CSRF desabilitado
-                .headers(headers -> headers
-                        .contentTypeOptions(HeadersConfigurer.ContentTypeOptionsConfig::disable) // Desativa o nosniff (opcional)
-                        .addHeaderWriter(new StaticHeadersWriter("X-XSS-Protection", "1; mode=block")) // Proteção contra XSS (opcional)
-                )
-                .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Permitir OPTIONS
-                        .anyRequest().permitAll()
-                )
-                .build();
-    }
-
-    @Bean
-    public CorsFilter corsFilter() {
-        return new CorsFilter(corsConfigurationSource());
-    }
+public class SimpleCorsConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:5173",
-                "http://buscaimoveis.pt",
-                "https://buscaimoveis.pt/"
-        ));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of(
-                "Content-Type", "Origin", "Accept",
-                "Access-Control-Request-Method", "Access-Control-Allow-Origin", "Access-Control-Request-Headers"
-        ));
-        configuration.setExposedHeaders(List.of(
-                "Access-Control-Allow-Origin", "Access-Control-Allow-Methods", "Access-Control-Allow-Headers"
-        ));
-        configuration.setAllowCredentials(true);
+
+        // Permitir tudo (origens, métodos, cabeçalhos)
+        configuration.setAllowedOrigins(Collections.singletonList("*")); // Permite todas as origens
+        configuration.setAllowedMethods(Collections.singletonList("*")); // Permite todos os métodos HTTP
+        configuration.setAllowedHeaders(Collections.singletonList("*")); // Permite todos os cabeçalhos
+        configuration.setAllowCredentials(false); // Credenciais desabilitadas por segurança (ajuste conforme necessário)
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Aplica a todas as rotas
         return source;
     }
 }
-
